# grf_estimator

./: CMakeLists.txt  README.md  cfg.yaml  grf_viewer.m  log2raisim_transformer.m  main.cpp
urdf/hound1/: calf.stl  hound1.urdf
urdf/hound2/: base.stl  calf.stl  hound2.urdf  shoulder.stl  thigh.stl
